fix bug 572974, stop partial download messages from getting into the offline store, r=standard8