mailnews/imap/src/nsImapProtocol.cpp
@@ -3599,7 +3599,7 @@ nsImapProtocol::PostLineDownLoadEvent(const char *line, PRUint32 uidOfMessage)
 {
   if (!GetServerStateParser().GetDownloadingHeaders())
   {
-    PRBool echoLineToMessageSink = PR_TRUE;
+    PRBool echoLineToMessageSink = PR_FALSE;
     // if we have a channel listener, then just spool the message
     // directly to the listener
     if (m_channelListener)
@@ -3614,9 +3614,10 @@ nsImapProtocol::PostLineDownLoadEvent(const char *line, PRUint32 uidOfMessage)
           m_channelListener->OnDataAvailable(request, m_channelContext, m_channelInputStream, 0, count);
         }
       }
-      if (m_runningUrl)
-        m_runningUrl->GetStoreResultsOffline(&echoLineToMessageSink);
     }
+    if (m_runningUrl)
+      m_runningUrl->GetStoreResultsOffline(&echoLineToMessageSink);
+
     if (m_imapMessageSink && line && echoLineToMessageSink && !GetPseudoInterrupted())
       m_imapMessageSink->ParseAdoptedMsgLine(line, uidOfMessage,
                                              GetServerStateParser().SizeOfMostRecentMessage(),
@@ -4057,10 +4058,16 @@ void nsImapProtocol::ProcessMailboxUpdate(PRBool handlePossibleUndo)
   // wait for a list of bodies to fetch.
   if (!DeathSignalReceived() && GetServerStateParser().LastCommandSuccessful())
   {
-      WaitForPotentialListOfBodysToFetch(&msgIdList, msgCount);
-      if ( msgCount && !DeathSignalReceived() && GetServerStateParser().LastCommandSuccessful())
+    WaitForPotentialListOfBodysToFetch(&msgIdList, msgCount);
+    if ( msgCount && !DeathSignalReceived() && GetServerStateParser().LastCommandSuccessful())
     {
+      // Tell the url that it should store the msg fetch results offline,
+      // while we're dumping the messages, and then restore the setting.
+      PRBool wasStoringOffline;
+      m_runningUrl->GetStoreResultsOffline(&wasStoringOffline);
+      m_runningUrl->SetStoreResultsOffline(PR_TRUE);
       FolderMsgDump(msgIdList, msgCount, kEveryThingRFC822Peek);
+      m_runningUrl->SetStoreResultsOffline(wasStoringOffline);
     }
   }
   if (DeathSignalReceived())
